# zfs

./: .gitattributes  .gitignore  README.md  tree.txt  zspose.txt
src/: .clang-format  .editorconfig  CMakeLists.txt  engine.sln  game.sln  game_client.sln  game_engine.sln  game_server.sln  game_tool.sln  preh.py  vcpkg.json  zfs.sln
src/Backup/: UpgradeLog.htm  game_client.sln  game_engine.sln  game_server.sln
src/SQL/: BDchangelog.txt  account.sql  activity.sql  analyse.sql  fso.sql  fso_log.sql  mysql_5.0.7z  t_castlewar_time_set.sql  t_dungeonid.sql  t_itemid.sql  导入这个就行.sql
src/UnitTest/: UnitTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters  packtool.cpp  pch.h
src/docs/: Core模块详细设计说明书.doc  Filepack说明文档.doc  GAME-UI系统.doc  二级属性表.xlsx  内存安全特别指导.doc  发射物系统.doc  声音系统详细设计说明书.doc  客户端总体流程文档.doc  技能系统.doc  服务器整体架构.vsd  游戏中鼠标键盘操作分析.doc  游戏启动流程.doc  游戏城战系统.doc  游戏工会（诸侯国）系统.doc  游戏工程配置文档.docx  游戏师徒系统.doc  游戏拍卖系统.doc  游戏流程处理.doc  游戏聊天系统.doc  游戏角色系统.doc  游戏（邮件，好友）系统.doc  网络通信系统详细设计说明书.doc  辅助库系统.doc  道具系统.doc  队伍系统.doc
src/game_client/: GlobalConfig.cpp  GlobalConfig.h  UIForm_Char.cpp  UIForm_Char.h  cpp.hint  fpsLimit.cpp  fpsLimit.h  game_client.vcproj  game_client.vcxproj  game_client.vcxproj.filters  gc_fps.cpp  gc_fps.h  gc_login_cmd.cpp  httpReq.cpp  httpReq.h  iob_func.cpp  lyyUtils.h  memory_file.h  memory_leak.txt  preConsole.cpp  preConsole.h  preLog.cpp  preLog.h  stdafx.h  ui_form_timer.cpp  ui_form_timer.h
src/game_engine/: CMakeLists.txt
src/gameworld_server/: CMakeLists.txt  GW_ActDB.cpp  GW_ActDB.h  GW_ActivityManager.cpp  GW_ActivityManager.h  LogicExt.cpp  LogicExt.h  auction.cpp  auction.h  cardtrade.cpp  cardtrade.h  gameworld_server.aps  gameworld_server.rc  gameworld_server.vcproj  gameworld_server.vcxproj  gameworld_server.vcxproj.filters  gw_LineGroup.cpp  gw_LineGroup.h  gw_LineMan.cpp  gw_LineMan.h  gw_castlewar.cpp  gw_castlewar.h  gw_chattransmittal.cpp  gw_chattransmittal.h  gw_clientchannel.cpp  gw_cmd_LineSys.cpp  gw_cmd_LineSys.h  gw_cmd_auction.cpp  gw_cmd_auction.h  gw_cmd_castlewar.cpp  gw_cmd_castlewar.h  gw_cmd_feod.cpp  gw_cmd_feod.h  gw_cmd_union.cpp  gw_cmd_union.h  gw_commandchannel.h  gw_config.h  gw_database.cpp  gw_database.h  gw_dbasyncqueue.h  (+38 more)
src/login_server/: CMakeLists.txt  LoginLogicExt.cpp  LoginLogicExt.h  charge_session.cpp  charge_session.h  dbmysql.cpp  dbmysql.h  gameworldstub.cpp  gameworldstub.h  gamigo_adb_session.cpp  gamigo_adb_session.h  guide_server.cpp  guide_server.h  iob_func.cpp  lgsthread.cpp  lgsthread.h  login.h  login_server.rc  login_server.vcproj  login_server.vcxproj  login_server.vcxproj.filters  loginserver.cpp  loginserver.h  main.cpp  resource.h  threadsafelist.h
src/pyUtils/: preh.py
src/region_server/: ActiveManager.cpp  CMakeLists.txt  PlayerLogic.cpp  PlayerLogic.h  RegionActManager.cpp  RegionActManager.h  cmd.cpp  cmd.h  cmd_auction.cpp  cmd_auction.h  cmd_castlewar.cpp  cmd_castlewar.h  cmd_channel.cpp  cmd_channel.h  cmd_feod.cpp  cmd_feod.h  cmd_item.cpp  cmd_item.h  cmd_union.cpp  cmd_union.h  jhwg_session.cpp  jhwg_session.h  nes.cpp  region.cpp  region.h  region_MonCastle.cpp  region_MonCastle.h  region_activity_py.cpp  region_activity_py.h  region_ai.cpp  region_ai.h  region_anti_robot.cpp  region_anti_robot.h  region_auction.cpp  region_auction.h  region_castlewar.cpp  region_castlewar.h  region_config.h  region_creature.cpp  region_creature.h  (+74 more)
src/runtime/: CrashReport.cfg  clt_engine.ini  clt_graph.ini  gameworld_server.ini  login_server.ini  member_center.ini  region_check.ini  region_server.ini  run.bat  tool_character.ini  uistudio_core.ini  uistudio_graph.ini  uistudio_user.ini  version_config.ini
src/shared/: ActivityInfo.h  GloableBuffer.cpp  auction_base.cpp  auction_base.h  auction_common.h  auction_net_base.h  business.cpp  business.h  castlewar_base.cpp  castlewar_base.h  castlewar_net_define.h  dblgs_protocol.h  game_debug.cpp  game_debug.h  game_debug_interface.h  game_debug_output.cpp  game_debug_output.h  game_debug_view.cpp  game_debug_view.h  game_leak_debug.h  game_mail_shared_const.h  game_object.cpp  game_object.h  game_reference_ofstream.h  game_string_assistant.cpp  game_string_assistant.h  game_team_share_const.h  gs_protocol.h  gw_protocol.h  gwt.cpp  gwt.h  herolist_base.cpp  herolist_base.h  item_bank.cpp  item_bank.h  item_base.cpp  item_base.h  item_net_define.h  item_npc_shop.h  item_pshop.cpp  (+44 more)
src/tool_character/: CustomItems.cpp  DlgNewShader.cpp  DlgNewShader.h  EditorFrame.cpp  MainFrm.cpp  Resource.h  tool_character.cpp  tool_character.rc  tool_character.vcxproj  tool_characterView.cpp
src/tool_crashreport/: ConfigHandle.cpp  CrashReport.vcxproj  CrashReport.vcxproj.filters  ReportHandle.cpp  XZip_Debug.lib  XZip_Release.lib
src/tool_files_packet/: MainFrm.cpp  MainFrm.h  WaitDlg.cpp  WaitDlg.h  WaitThread.cpp  WaitThread.h  console_main.h  game_filter.h  pack_tool.cpp  pack_tool.h  resource.h  stdafx.cpp  stdafx.h  tool_files_packet.cpp  tool_files_packet.h  tool_files_packet.rc  tool_files_packet.sln  tool_files_packet.vcproj  tool_files_packet.vcxproj  tool_files_packet.vcxproj.filters  tool_files_packetDoc.cpp  tool_files_packetDoc.h  tool_files_packetView.cpp  tool_files_packetView.h
src/tool_max9_utility/: CharUtil.cpp  CharUtil.h  DllEntry.cpp  EnumProc.cpp  max9_plugin.vcproj  max9_plugin.vcxproj  max9_plugin.vcxproj.filters  max_plugin.aps  max_plugin.rc  meshlod.h  rt1tort2.h
src/tool_max_utility/: CharUtil.cpp  CharUtil.h  EnumProc.h  MsgWnd.cpp  MsgWnd.h  Quadric.cpp  Quadric.h  max_plugin.cpp  max_plugin.def  max_plugin.vcproj  max_plugin.vcxproj  max_plugin.vcxproj.filters  meshlod.cpp  resource.h  stdafx.cpp
src/tool_scene/: BrushColorView.cpp  BrushColorView.h  BrushGrassForm.cpp  BrushGrassForm.h  BrushMapView.cpp  BrushMapView.h  BrushVertexView.cpp  BrushVertexView.h  ClassDiagram.cd  DlgBlockInfo.cpp  DlgBlockInfo.h  DlgHeightMap.cpp  DlgHeightMap.h  DlgNewBlock.cpp  DlgNewBlock.h  DlgNewScene.cpp  DlgNewScene.h  DlgNewScene.htm  DlgNpc.cpp  DlgNpc.h  EditorFrame.cpp  EditorFrame.h  GrassTextWnd.cpp  (+48 more)
(+1294 files in other folders)
